--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,11 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #131C25;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+}
+
+body, html {
+  height: 100%;
 }
